<resources>
    <string name="app_name">GameboyDB</string>
    <string name="search_icon_content_description">Tap this icon to start searching games in the database.</string>
    <string name="back_icon_content_description">Use this icon to go back to the previous page.</string>
    <string name="primary_action_icon_content_description">Use this icon to trigger a primary action.</string>
    <string name="secondary_action_icon_content_description">Use this icon to trigger a secondary action.</string>
    <string name="game_cover_content_description">This is the cover image of the game.</string>
    <string name="play_gameplay_button_content_description">Use this action to watch the game gameplay.</string>
    <string name="game_esrb_rating_content_description">This is the ESRB rating of the game.</string>
    <string name="list_item_check_content_description">This is the item that is active.</string>
    <string name="game_marked_favorite">The game was added to the favorites list.</string>
    <string name="game_unmarked_favorite">The game was removed from the favorites list.</string>
    <string name="top_rated">Top Rated</string>
    <string name="controversial">Controversial</string>
    <string name="play_game">Play Game</string>
    <string name="game_screenshot_content_description">TODO</string>
    <string name="promo">Promo</string>
    <string name="trivia">Trivia</string>
    <string name="esrb_rating">ESRB Rating</string>
    <string name="developers">Developers</string>
    <string name="publishers">Publishers</string>
    <string name="preferences">Preferences</string>
    <string name="project_support_cta">Support the project!</string>
    <string name="project_support_cta_description">Leave feedback on our repository</string>
    <string name="project_support_cta_button">Star us on GitHub</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="information">Information</string>
    <string name="app_version">Version</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_system">System</string>
    <string name="theme_orange">Orange</string>
    <string name="current_language">English (Default)</string>
    <string name="search_games_query_hint">Search for a game</string>
</resources>