<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageButton
        android:id="@+id/navigable_top_bar_back_action"
        style="@style/icon_button_top_bar"
        android:contentDescription="@string/back_icon_content_description"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/navigable_top_bar_title" />

    <TextView
        android:id="@+id/navigable_top_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/navigable_top_bar_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigable_top_bar_title"
        tools:text="Subtitle" />

    <ImageButton
        android:id="@+id/navigable_top_bar_secondary_action"
        style="@style/icon_button_top_bar"
        android:contentDescription="@string/secondary_action_icon_content_description"
        app:layout_constraintBottom_toBottomOf="@id/navigable_top_bar_back_action"
        app:layout_constraintEnd_toStartOf="@id/navigable_top_bar_primary_action"
        app:layout_constraintTop_toTopOf="@id/navigable_top_bar_back_action"
        tools:src="@drawable/play_circle" />

    <ImageButton
        android:id="@+id/navigable_top_bar_primary_action"
        style="@style/icon_button_top_bar"
        android:contentDescription="@string/primary_action_icon_content_description"
        app:layout_constraintBottom_toBottomOf="@id/navigable_top_bar_back_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/navigable_top_bar_back_action"
        tools:src="@drawable/bookmark_simple" />
</merge>